// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test BasicPicker API should render the advance tools 1`] = `
<div
  className="css-x0eppt"
>
  <div
    className="css-m58a5i"
  />
  <div
    className="css-3ef40x"
    style={
      Object {
        "background": "#088da5",
      }
    }
  >
    <div
      className="css-1uaa0vj"
      style={
        Object {
          "color": "#fff",
        }
      }
    >
      #088da5
    </div>
  </div>
  <div
    style={
      Object {
        "padding": 10,
      }
    }
  >
    <div
      className="css-w1azp9"
    >
      <div
        className="css-1hbvcva"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="swatch"
        tabIndex={0}
        title="#5a80b4"
      />
      <div
        className="css-m4zxvt"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="swatch"
        tabIndex={0}
        title="#40e0d0"
      />
      <div
        className="css-1sqfe4l"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="swatch"
        tabIndex={0}
        title="#088da5"
      />
      <div
        className="css-96uqyh"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="swatch"
        tabIndex={0}
        title="#f6546a"
      />
      <div
        className="css-1yav785"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="swatch"
        tabIndex={0}
        title="#cac8a0"
      />
      <div
        className="css-qst2hs"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="swatch"
        tabIndex={0}
        title="#0079cf"
      />
      <div
        className="css-yxjnn"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="swatch"
        tabIndex={0}
        title="#ffa6ca"
      />
      <div
        className="css-1s9wf3m"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="swatch"
        tabIndex={0}
        title="#03ec13"
      />
      <div
        className="css-93el6m"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="swatch"
        tabIndex={0}
        title="#3999dc"
      />
      <div
        className="css-7dxf9e"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="swatch"
        tabIndex={0}
        title="#e1c9ec"
      />
      <div
        className="css-13nxtfe"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="swatch"
        tabIndex={0}
        title="#2f9d66"
      />
      <div
        className="css-1ot1zbd"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="swatch"
        tabIndex={0}
        title="#daa520"
      />
    </div>
    <input
      className="css-sskoaq"
      onBlur={[Function]}
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder=""
      spellCheck="false"
      value="#088DA5"
    />
    <div
      className="css-1vt3t4y"
    >
      <select
        className="css-zt7y5h"
        name="formats"
        onChange={[Function]}
      >
        <option
          value="HEX"
        >
          HEX
        </option>
        <option
          value="HSV"
        >
          HSV
        </option>
        <option
          value="RGB"
        >
          RGB
        </option>
        <option
          value="HSL"
        >
          HSL
        </option>
      </select>
    </div>
    <div
      className="css-tury48"
    >
      <span
        className="css-1v5ga19"
        title="Image picker"
      >
        <input
          accept="image/*"
          id="uploader"
          onChange={[Function]}
          style={
            Object {
              "display": "none",
            }
          }
          type="file"
        />
        <svg
          className="css-1h5x3dy"
          height={20}
          id="image-icon"
          viewBox="0 0 30 28"
          width={20}
        >
          <title />
          <path
            d="M10 9c0 1.656-1.344 3-3 3s-3-1.344-3-3 1.344-3 3-3 3 1.344 3 3zM26 15v7h-22v-3l5-5 2.5 2.5 8-8zM27.5 4h-25c-0.266 0-0.5 0.234-0.5 0.5v19c0 0.266 0.234 0.5 0.5 0.5h25c0.266 0 0.5-0.234 0.5-0.5v-19c0-0.266-0.234-0.5-0.5-0.5zM30 4.5v19c0 1.375-1.125 2.5-2.5 2.5h-25c-1.375 0-2.5-1.125-2.5-2.5v-19c0-1.375 1.125-2.5 2.5-2.5h25c1.375 0 2.5 1.125 2.5 2.5z"
            fill="#1f1f1f"
          />
        </svg>
      </span>
      <span
        className="css-1v5ga19"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={0}
        title="Palette generator"
      >
        <svg
          className="css-1h5x3dy"
          height={21}
          viewBox="0 0 24 24"
          width={21}
        >
          <title />
          <path
            d="M17.484 12c0.844 0 1.5-0.656 1.5-1.5s-0.656-1.5-1.5-1.5-1.5 0.656-1.5 1.5 0.656 1.5 1.5 1.5zM14.484 8.016c0.844 0 1.5-0.656 1.5-1.5s-0.656-1.5-1.5-1.5-1.5 0.656-1.5 1.5 0.656 1.5 1.5 1.5zM9.516 8.016c0.844 0 1.5-0.656 1.5-1.5s-0.656-1.5-1.5-1.5-1.5 0.656-1.5 1.5 0.656 1.5 1.5 1.5zM6.516 12c0.844 0 1.5-0.656 1.5-1.5s-0.656-1.5-1.5-1.5-1.5 0.656-1.5 1.5 0.656 1.5 1.5 1.5zM12 3c4.969 0 9 3.609 9 8.016 0 2.766-2.25 4.969-5.016 4.969h-1.734c-0.844 0-1.5 0.656-1.5 1.5 0 0.375 0.141 0.703 0.375 0.984s0.375 0.656 0.375 1.031c0 0.844-0.656 1.5-1.5 1.5-4.969 0-9-4.031-9-9s4.031-9 9-9z"
            fill="#1f1f1f"
          />
        </svg>
      </span>
      <span
        className="css-1v5ga19"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={0}
        title="tint picker"
      >
        <svg
          className="css-1h5x3dy"
          height={21}
          viewBox="0 0 16 28"
          width={21}
        >
          <title />
          <path
            d="M8 18c0-0.391-0.125-0.766-0.313-1.078-0.203-0.313-1.031-1.375-1.359-2.422-0.047-0.172-0.203-0.25-0.328-0.25s-0.281 0.078-0.328 0.25c-0.328 1.047-1.156 2.109-1.359 2.422-0.187 0.313-0.313 0.688-0.313 1.078 0 1.109 0.891 2 2 2s2-0.891 2-2zM16 16c0 4.422-3.578 8-8 8s-8-3.578-8-8c0-1.578 0.484-3.047 1.266-4.297 0.797-1.25 4.141-5.484 5.406-9.703 0.203-0.672 0.828-1 1.328-1s1.141 0.328 1.328 1c1.266 4.219 4.609 8.453 5.406 9.703s1.266 2.719 1.266 4.297z"
            fill="#1f1f1f"
          />
        </svg>
      </span>
      <span
        className="css-1v5ga19"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={0}
        title="shade picker"
      >
        <svg
          className="css-1h5x3dy"
          height={20}
          viewBox="0 0 24 28"
          width={20}
        >
          <title />
          <path
            d="M12 22.5v-17c-4.688 0-8.5 3.813-8.5 8.5s3.813 8.5 8.5 8.5zM24 14c0 6.625-5.375 12-12 12s-12-5.375-12-12 5.375-12 12-12 12 5.375 12 12z"
            fill="#1f1f1f"
          />
        </svg>
      </span>
      <span
        aria-label="Copied"
        className="no-tooltip css-1v5ga19"
        id="clipboard"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={0}
      >
        <svg
          className="css-1h5x3dy"
          height={18}
          viewBox="0 0 20 20"
          width={19}
        >
          <title />
          <path
            d="M15.6 2l-1.2 3h-8.8l-1.2-3c-0.771 0-1.4 0.629-1.4 1.4v15.2c0 0.77 0.629 1.4 1.399 1.4h11.2c0.77 0 1.4-0.631 1.4-1.4v-15.2c0.001-0.771-0.63-1.4-1.399-1.4zM13.6 4l0.9-2h-2.181l-0.719-2h-3.2l-0.72 2h-2.18l0.899 2h7.201z"
            fill="#1f1f1f"
          />
        </svg>
      </span>
      <span
        className="css-1v5ga19"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={0}
        title="reset colors"
      >
        <svg
          className="css-1h5x3dy"
          height={18}
          viewBox="0 0 32 32"
          width={17.5}
        >
          <title />
          <path
            d="M32 16c0-8.836-7.164-16-16-16-8.837 0-16 7.164-16 16 0 8.837 7.163 16 16 16 8.836 0 16-7.163 16-16zM8 16l8-8v6h8v4h-8v6l-8-8z"
            fill="#1f1f1f"
          />
        </svg>
      </span>
    </div>
    <div>
      <ul
        className="css-rg6642"
      >
        <li>
          <span
            className="css-1v5ga19"
            title="color spin"
          >
            <svg
              className="css-oyt054"
              height={18}
              viewBox="0 0 24 28"
              width={18}
            >
              <title />
              <path
                d="M23.609 16.5c0 0.031 0 0.078-0.016 0.109-1.328 5.531-5.891 9.391-11.656 9.391-3.047 0-6-1.203-8.219-3.313l-2.016 2.016c-0.187 0.187-0.438 0.297-0.703 0.297-0.547 0-1-0.453-1-1v-7c0-0.547 0.453-1 1-1h7c0.547 0 1 0.453 1 1 0 0.266-0.109 0.516-0.297 0.703l-2.141 2.141c1.469 1.375 3.422 2.156 5.437 2.156 2.781 0 5.359-1.437 6.813-3.813 0.375-0.609 0.562-1.203 0.828-1.828 0.078-0.219 0.234-0.359 0.469-0.359h3c0.281 0 0.5 0.234 0.5 0.5zM24 4v7c0 0.547-0.453 1-1 1h-7c-0.547 0-1-0.453-1-1 0-0.266 0.109-0.516 0.297-0.703l2.156-2.156c-1.484-1.375-3.437-2.141-5.453-2.141-2.781 0-5.359 1.437-6.813 3.813-0.375 0.609-0.562 1.203-0.828 1.828-0.078 0.219-0.234 0.359-0.469 0.359h-3.109c-0.281 0-0.5-0.234-0.5-0.5v-0.109c1.344-5.547 5.953-9.391 11.719-9.391 3.063 0 6.047 1.219 8.266 3.313l2.031-2.016c0.187-0.187 0.438-0.297 0.703-0.297 0.547 0 1 0.453 1 1z"
                fill="#1f1f1f"
              />
            </svg>
            <input
              className="css-1705gpz"
              max="360"
              min="-360"
              onChange={[Function]}
              type="range"
              value={0}
            />
            <label
              className="css-p1qqrp"
              color="#1f1f1f"
            >
              0
              <sup>
                °
              </sup>
            </label>
          </span>
        </li>
        <li>
          <span
            className="css-1v5ga19"
            title="color saturator"
          >
            <svg
              className="css-oyt054"
              height={20}
              viewBox="0 0 24 24"
              width={20}
            >
              <title />
              <path
                d="M12 15.422l3.75 2.25-0.984-4.266 3.328-2.906-4.406-0.375-1.688-4.031v9.328zM21.984 9.234l-5.438 4.734 1.641 7.031-6.188-3.75-6.188 3.75 1.641-7.031-5.438-4.734 7.172-0.609 2.813-6.609 2.813 6.609z"
                fill="#1f1f1f"
              />
            </svg>
            <input
              className="css-1705gpz"
              max="100"
              min="10"
              onChange={[Function]}
              type="range"
              value={0}
            />
            <label
              className="css-p1qqrp"
              color="#1f1f1f"
            >
              0
            </label>
          </span>
        </li>
        <li>
          <span
            className="css-1v5ga19"
            title="color desaturator"
          >
            <svg
              className="css-oyt054"
              height={20}
              viewBox="0 0 26 28"
              width={20}
            >
              <title />
              <path
                d="M23.859 22.625c1.172 1.859 0.344 3.375-1.859 3.375h-18c-2.203 0-3.031-1.516-1.859-3.375l7.859-12.391v-6.234h-1c-0.547 0-1-0.453-1-1s0.453-1 1-1h8c0.547 0 1 0.453 1 1s-0.453 1-1 1h-1v6.234zM11.688 11.297l-4.25 6.703h11.125l-4.25-6.703-0.313-0.484v-6.813h-2v6.813z"
                fill="#1f1f1f"
              />
            </svg>
            <input
              className="css-1705gpz"
              max="100"
              min="10"
              onChange={[Function]}
              type="range"
              value={0}
            />
            <label
              className="css-p1qqrp"
              color="#1f1f1f"
            >
              0
            </label>
          </span>
        </li>
        <li>
          <span
            className="css-1v5ga19"
            title="color darkener"
          >
            <svg
              className="css-oyt054"
              height={16}
              viewBox="0 0 32 32"
              width={16}
            >
              <title />
              <path
                d="M24.633 22.184c-8.188 0-14.82-6.637-14.82-14.82 0-2.695 0.773-5.188 2.031-7.363-6.824 1.968-11.844 8.187-11.844 15.644 0 9.031 7.32 16.355 16.352 16.355 7.457 0 13.68-5.023 15.648-11.844-2.18 1.254-4.672 2.028-7.367 2.028z"
                fill="#1f1f1f"
              />
            </svg>
            <input
              className="css-1705gpz"
              max="100"
              min="10"
              onChange={[Function]}
              type="range"
              value={0}
            />
            <label
              className="css-p1qqrp"
              color="#1f1f1f"
            >
              0
            </label>
          </span>
        </li>
        <li>
          <span
            className="css-1v5ga19"
            title="color brightener"
          >
            <svg
              className="css-oyt054"
              height={20}
              viewBox="0 0 32 32"
              width={20}
            >
              <title />
              <path
                d="M16 9c-3.859 0-7 3.141-7 7s3.141 7 7 7 7-3.141 7-7c0-3.859-3.141-7-7-7zM16 21c-2.762 0-5-2.238-5-5s2.238-5 5-5 5 2.238 5 5-2.238 5-5 5zM16 7c0.552 0 1-0.448 1-1v-2c0-0.552-0.448-1-1-1s-1 0.448-1 1v2c0 0.552 0.448 1 1 1zM16 25c-0.552 0-1 0.448-1 1v2c0 0.552 0.448 1 1 1s1-0.448 1-1v-2c0-0.552-0.448-1-1-1zM23.777 9.635l1.414-1.414c0.391-0.391 0.391-1.023 0-1.414s-1.023-0.391-1.414 0l-1.414 1.414c-0.391 0.391-0.391 1.023 0 1.414s1.023 0.391 1.414 0zM8.223 22.365l-1.414 1.414c-0.391 0.391-0.391 1.023 0 1.414s1.023 0.391 1.414 0l1.414-1.414c0.391-0.392 0.391-1.023 0-1.414s-1.023-0.392-1.414 0zM7 16c0-0.552-0.448-1-1-1h-2c-0.552 0-1 0.448-1 1s0.448 1 1 1h2c0.552 0 1-0.448 1-1zM28 15h-2c-0.552 0-1 0.448-1 1s0.448 1 1 1h2c0.552 0 1-0.448 1-1s-0.448-1-1-1zM8.221 9.635c0.391 0.391 1.024 0.391 1.414 0s0.391-1.023 0-1.414l-1.414-1.414c-0.391-0.391-1.023-0.391-1.414 0s-0.391 1.023 0 1.414l1.414 1.414zM23.779 22.363c-0.392-0.391-1.023-0.391-1.414 0s-0.392 1.023 0 1.414l1.414 1.414c0.391 0.391 1.023 0.391 1.414 0s0.391-1.023 0-1.414l-1.414-1.414z"
                fill="#1f1f1f"
              />
            </svg>
            <input
              className="css-1705gpz"
              max="100"
              min="10"
              onChange={[Function]}
              type="range"
              value={0}
            />
            <label
              className="css-p1qqrp"
              color="#1f1f1f"
            >
              0
            </label>
          </span>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Test BasicPicker API should render the basic picker 1`] = `
<div
  className="css-x0eppt"
>
  <div
    className="css-m58a5i"
  />
  <div
    className="css-3ef40x"
    style={
      Object {
        "background": "#088da5",
      }
    }
  >
    <div
      className="css-1uaa0vj"
      style={
        Object {
          "color": "#fff",
        }
      }
    >
      #088da5
    </div>
  </div>
  <div
    style={
      Object {
        "padding": 10,
      }
    }
  >
    <div
      className="css-w1azp9"
    >
      <div
        className="css-1hbvcva"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="swatch"
        tabIndex={0}
        title="#5a80b4"
      />
      <div
        className="css-m4zxvt"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="swatch"
        tabIndex={0}
        title="#40e0d0"
      />
      <div
        className="css-1sqfe4l"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="swatch"
        tabIndex={0}
        title="#088da5"
      />
      <div
        className="css-96uqyh"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="swatch"
        tabIndex={0}
        title="#f6546a"
      />
      <div
        className="css-1yav785"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="swatch"
        tabIndex={0}
        title="#cac8a0"
      />
      <div
        className="css-qst2hs"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="swatch"
        tabIndex={0}
        title="#0079cf"
      />
      <div
        className="css-yxjnn"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="swatch"
        tabIndex={0}
        title="#ffa6ca"
      />
      <div
        className="css-1s9wf3m"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="swatch"
        tabIndex={0}
        title="#03ec13"
      />
      <div
        className="css-93el6m"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="swatch"
        tabIndex={0}
        title="#3999dc"
      />
      <div
        className="css-7dxf9e"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="swatch"
        tabIndex={0}
        title="#e1c9ec"
      />
      <div
        className="css-13nxtfe"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="swatch"
        tabIndex={0}
        title="#2f9d66"
      />
      <div
        className="css-1ot1zbd"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="swatch"
        tabIndex={0}
        title="#daa520"
      />
    </div>
    <input
      className="css-sskoaq"
      onBlur={[Function]}
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder=""
      spellCheck="false"
      value="#088DA5"
    />
    <div
      className="css-1vt3t4y"
    >
      <select
        className="css-zt7y5h"
        name="formats"
        onChange={[Function]}
      >
        <option
          value="HEX"
        >
          HEX
        </option>
        <option
          value="HSV"
        >
          HSV
        </option>
        <option
          value="RGB"
        >
          RGB
        </option>
        <option
          value="HSL"
        >
          HSL
        </option>
      </select>
    </div>
    <div
      className="css-tury48"
    >
      <span
        className="css-1v5ga19"
        title="Image picker"
      >
        <input
          accept="image/*"
          id="uploader"
          onChange={[Function]}
          style={
            Object {
              "display": "none",
            }
          }
          type="file"
        />
        <svg
          className="css-1h5x3dy"
          height={20}
          id="image-icon"
          viewBox="0 0 30 28"
          width={20}
        >
          <title />
          <path
            d="M10 9c0 1.656-1.344 3-3 3s-3-1.344-3-3 1.344-3 3-3 3 1.344 3 3zM26 15v7h-22v-3l5-5 2.5 2.5 8-8zM27.5 4h-25c-0.266 0-0.5 0.234-0.5 0.5v19c0 0.266 0.234 0.5 0.5 0.5h25c0.266 0 0.5-0.234 0.5-0.5v-19c0-0.266-0.234-0.5-0.5-0.5zM30 4.5v19c0 1.375-1.125 2.5-2.5 2.5h-25c-1.375 0-2.5-1.125-2.5-2.5v-19c0-1.375 1.125-2.5 2.5-2.5h25c1.375 0 2.5 1.125 2.5 2.5z"
            fill="#1f1f1f"
          />
        </svg>
      </span>
      <span
        className="css-1v5ga19"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={0}
        title="Palette generator"
      >
        <svg
          className="css-1h5x3dy"
          height={21}
          viewBox="0 0 24 24"
          width={21}
        >
          <title />
          <path
            d="M17.484 12c0.844 0 1.5-0.656 1.5-1.5s-0.656-1.5-1.5-1.5-1.5 0.656-1.5 1.5 0.656 1.5 1.5 1.5zM14.484 8.016c0.844 0 1.5-0.656 1.5-1.5s-0.656-1.5-1.5-1.5-1.5 0.656-1.5 1.5 0.656 1.5 1.5 1.5zM9.516 8.016c0.844 0 1.5-0.656 1.5-1.5s-0.656-1.5-1.5-1.5-1.5 0.656-1.5 1.5 0.656 1.5 1.5 1.5zM6.516 12c0.844 0 1.5-0.656 1.5-1.5s-0.656-1.5-1.5-1.5-1.5 0.656-1.5 1.5 0.656 1.5 1.5 1.5zM12 3c4.969 0 9 3.609 9 8.016 0 2.766-2.25 4.969-5.016 4.969h-1.734c-0.844 0-1.5 0.656-1.5 1.5 0 0.375 0.141 0.703 0.375 0.984s0.375 0.656 0.375 1.031c0 0.844-0.656 1.5-1.5 1.5-4.969 0-9-4.031-9-9s4.031-9 9-9z"
            fill="#1f1f1f"
          />
        </svg>
      </span>
      <span
        className="css-1v5ga19"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={0}
        title="tint picker"
      >
        <svg
          className="css-1h5x3dy"
          height={21}
          viewBox="0 0 16 28"
          width={21}
        >
          <title />
          <path
            d="M8 18c0-0.391-0.125-0.766-0.313-1.078-0.203-0.313-1.031-1.375-1.359-2.422-0.047-0.172-0.203-0.25-0.328-0.25s-0.281 0.078-0.328 0.25c-0.328 1.047-1.156 2.109-1.359 2.422-0.187 0.313-0.313 0.688-0.313 1.078 0 1.109 0.891 2 2 2s2-0.891 2-2zM16 16c0 4.422-3.578 8-8 8s-8-3.578-8-8c0-1.578 0.484-3.047 1.266-4.297 0.797-1.25 4.141-5.484 5.406-9.703 0.203-0.672 0.828-1 1.328-1s1.141 0.328 1.328 1c1.266 4.219 4.609 8.453 5.406 9.703s1.266 2.719 1.266 4.297z"
            fill="#1f1f1f"
          />
        </svg>
      </span>
      <span
        className="css-1v5ga19"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={0}
        title="shade picker"
      >
        <svg
          className="css-1h5x3dy"
          height={20}
          viewBox="0 0 24 28"
          width={20}
        >
          <title />
          <path
            d="M12 22.5v-17c-4.688 0-8.5 3.813-8.5 8.5s3.813 8.5 8.5 8.5zM24 14c0 6.625-5.375 12-12 12s-12-5.375-12-12 5.375-12 12-12 12 5.375 12 12z"
            fill="#1f1f1f"
          />
        </svg>
      </span>
      <span
        aria-label="Copied"
        className="no-tooltip css-1v5ga19"
        id="clipboard"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={0}
      >
        <svg
          className="css-1h5x3dy"
          height={18}
          viewBox="0 0 20 20"
          width={19}
        >
          <title />
          <path
            d="M15.6 2l-1.2 3h-8.8l-1.2-3c-0.771 0-1.4 0.629-1.4 1.4v15.2c0 0.77 0.629 1.4 1.399 1.4h11.2c0.77 0 1.4-0.631 1.4-1.4v-15.2c0.001-0.771-0.63-1.4-1.399-1.4zM13.6 4l0.9-2h-2.181l-0.719-2h-3.2l-0.72 2h-2.18l0.899 2h7.201z"
            fill="#1f1f1f"
          />
        </svg>
      </span>
      <span
        className="css-1v5ga19"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={0}
        title="reset colors"
      >
        <svg
          className="css-1h5x3dy"
          height={18}
          viewBox="0 0 32 32"
          width={17.5}
        >
          <title />
          <path
            d="M32 16c0-8.836-7.164-16-16-16-8.837 0-16 7.164-16 16 0 8.837 7.163 16 16 16 8.836 0 16-7.163 16-16zM8 16l8-8v6h8v4h-8v6l-8-8z"
            fill="#1f1f1f"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Test BasicPicker API should render the basic picker with dark theme 1`] = `
<div
  className="css-1pgxg56"
>
  <div
    className="css-m58a5i"
  />
  <div
    className="css-3ef40x"
    style={
      Object {
        "background": "#088da5",
      }
    }
  >
    <div
      className="css-1uaa0vj"
      style={
        Object {
          "color": "#fff",
        }
      }
    >
      #088da5
    </div>
  </div>
  <div
    style={
      Object {
        "padding": 10,
      }
    }
  >
    <div
      className="css-w1azp9"
    >
      <div
        className="css-1hbvcva"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="swatch"
        tabIndex={0}
        title="#5a80b4"
      />
      <div
        className="css-m4zxvt"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="swatch"
        tabIndex={0}
        title="#40e0d0"
      />
      <div
        className="css-1sqfe4l"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="swatch"
        tabIndex={0}
        title="#088da5"
      />
      <div
        className="css-96uqyh"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="swatch"
        tabIndex={0}
        title="#f6546a"
      />
      <div
        className="css-1yav785"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="swatch"
        tabIndex={0}
        title="#cac8a0"
      />
      <div
        className="css-qst2hs"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="swatch"
        tabIndex={0}
        title="#0079cf"
      />
      <div
        className="css-yxjnn"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="swatch"
        tabIndex={0}
        title="#ffa6ca"
      />
      <div
        className="css-1s9wf3m"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="swatch"
        tabIndex={0}
        title="#03ec13"
      />
      <div
        className="css-93el6m"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="swatch"
        tabIndex={0}
        title="#3999dc"
      />
      <div
        className="css-7dxf9e"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="swatch"
        tabIndex={0}
        title="#e1c9ec"
      />
      <div
        className="css-13nxtfe"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="swatch"
        tabIndex={0}
        title="#2f9d66"
      />
      <div
        className="css-1ot1zbd"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="swatch"
        tabIndex={0}
        title="#daa520"
      />
    </div>
    <input
      className="css-sskoaq"
      onBlur={[Function]}
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder=""
      spellCheck="false"
      value="#088DA5"
    />
    <div
      className="css-1vt3t4y"
    >
      <select
        className="css-zt7y5h"
        name="formats"
        onChange={[Function]}
      >
        <option
          value="HEX"
        >
          HEX
        </option>
        <option
          value="HSV"
        >
          HSV
        </option>
        <option
          value="RGB"
        >
          RGB
        </option>
        <option
          value="HSL"
        >
          HSL
        </option>
      </select>
    </div>
    <div
      className="css-tury48"
    >
      <span
        className="css-1v5ga19"
        title="Image picker"
      >
        <input
          accept="image/*"
          id="uploader"
          onChange={[Function]}
          style={
            Object {
              "display": "none",
            }
          }
          type="file"
        />
        <svg
          className="css-1h5x3dy"
          height={20}
          id="image-icon"
          viewBox="0 0 30 28"
          width={20}
        >
          <title />
          <path
            d="M10 9c0 1.656-1.344 3-3 3s-3-1.344-3-3 1.344-3 3-3 3 1.344 3 3zM26 15v7h-22v-3l5-5 2.5 2.5 8-8zM27.5 4h-25c-0.266 0-0.5 0.234-0.5 0.5v19c0 0.266 0.234 0.5 0.5 0.5h25c0.266 0 0.5-0.234 0.5-0.5v-19c0-0.266-0.234-0.5-0.5-0.5zM30 4.5v19c0 1.375-1.125 2.5-2.5 2.5h-25c-1.375 0-2.5-1.125-2.5-2.5v-19c0-1.375 1.125-2.5 2.5-2.5h25c1.375 0 2.5 1.125 2.5 2.5z"
            fill="rgb(255, 255, 255)"
          />
        </svg>
      </span>
      <span
        className="css-1v5ga19"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={0}
        title="Palette generator"
      >
        <svg
          className="css-1h5x3dy"
          height={21}
          viewBox="0 0 24 24"
          width={21}
        >
          <title />
          <path
            d="M17.484 12c0.844 0 1.5-0.656 1.5-1.5s-0.656-1.5-1.5-1.5-1.5 0.656-1.5 1.5 0.656 1.5 1.5 1.5zM14.484 8.016c0.844 0 1.5-0.656 1.5-1.5s-0.656-1.5-1.5-1.5-1.5 0.656-1.5 1.5 0.656 1.5 1.5 1.5zM9.516 8.016c0.844 0 1.5-0.656 1.5-1.5s-0.656-1.5-1.5-1.5-1.5 0.656-1.5 1.5 0.656 1.5 1.5 1.5zM6.516 12c0.844 0 1.5-0.656 1.5-1.5s-0.656-1.5-1.5-1.5-1.5 0.656-1.5 1.5 0.656 1.5 1.5 1.5zM12 3c4.969 0 9 3.609 9 8.016 0 2.766-2.25 4.969-5.016 4.969h-1.734c-0.844 0-1.5 0.656-1.5 1.5 0 0.375 0.141 0.703 0.375 0.984s0.375 0.656 0.375 1.031c0 0.844-0.656 1.5-1.5 1.5-4.969 0-9-4.031-9-9s4.031-9 9-9z"
            fill="rgb(255, 255, 255)"
          />
        </svg>
      </span>
      <span
        className="css-1v5ga19"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={0}
        title="tint picker"
      >
        <svg
          className="css-1h5x3dy"
          height={21}
          viewBox="0 0 16 28"
          width={21}
        >
          <title />
          <path
            d="M8 18c0-0.391-0.125-0.766-0.313-1.078-0.203-0.313-1.031-1.375-1.359-2.422-0.047-0.172-0.203-0.25-0.328-0.25s-0.281 0.078-0.328 0.25c-0.328 1.047-1.156 2.109-1.359 2.422-0.187 0.313-0.313 0.688-0.313 1.078 0 1.109 0.891 2 2 2s2-0.891 2-2zM16 16c0 4.422-3.578 8-8 8s-8-3.578-8-8c0-1.578 0.484-3.047 1.266-4.297 0.797-1.25 4.141-5.484 5.406-9.703 0.203-0.672 0.828-1 1.328-1s1.141 0.328 1.328 1c1.266 4.219 4.609 8.453 5.406 9.703s1.266 2.719 1.266 4.297z"
            fill="rgb(255, 255, 255)"
          />
        </svg>
      </span>
      <span
        className="css-1v5ga19"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={0}
        title="shade picker"
      >
        <svg
          className="css-1h5x3dy"
          height={20}
          viewBox="0 0 24 28"
          width={20}
        >
          <title />
          <path
            d="M12 22.5v-17c-4.688 0-8.5 3.813-8.5 8.5s3.813 8.5 8.5 8.5zM24 14c0 6.625-5.375 12-12 12s-12-5.375-12-12 5.375-12 12-12 12 5.375 12 12z"
            fill="rgb(255, 255, 255)"
          />
        </svg>
      </span>
      <span
        aria-label="Copied"
        className="no-tooltip css-1v5ga19"
        id="clipboard"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={0}
      >
        <svg
          className="css-1h5x3dy"
          height={18}
          viewBox="0 0 20 20"
          width={19}
        >
          <title />
          <path
            d="M15.6 2l-1.2 3h-8.8l-1.2-3c-0.771 0-1.4 0.629-1.4 1.4v15.2c0 0.77 0.629 1.4 1.399 1.4h11.2c0.77 0 1.4-0.631 1.4-1.4v-15.2c0.001-0.771-0.63-1.4-1.399-1.4zM13.6 4l0.9-2h-2.181l-0.719-2h-3.2l-0.72 2h-2.18l0.899 2h7.201z"
            fill="rgb(255, 255, 255)"
          />
        </svg>
      </span>
      <span
        className="css-1v5ga19"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={0}
        title="reset colors"
      >
        <svg
          className="css-1h5x3dy"
          height={18}
          viewBox="0 0 32 32"
          width={17.5}
        >
          <title />
          <path
            d="M32 16c0-8.836-7.164-16-16-16-8.837 0-16 7.164-16 16 0 8.837 7.163 16 16 16 8.836 0 16-7.163 16-16zM8 16l8-8v6h8v4h-8v6l-8-8z"
            fill="rgb(255, 255, 255)"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Test BasicPicker API should render the picker with user defined swatches 1`] = `
<div
  className="css-x0eppt"
>
  <div
    className="css-m58a5i"
  />
  <div
    className="css-3ef40x"
    style={
      Object {
        "background": "#088da5",
      }
    }
  >
    <div
      className="css-1uaa0vj"
      style={
        Object {
          "color": "#fff",
        }
      }
    >
      #088da5
    </div>
  </div>
  <div
    style={
      Object {
        "padding": 10,
      }
    }
  >
    <div
      className="css-w1azp9"
    >
      <div
        className="css-14g5nes"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="swatch"
        tabIndex={0}
        title="red"
      />
      <div
        className="css-pa4qu5"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="swatch"
        tabIndex={0}
        title="blue"
      />
    </div>
    <input
      className="css-sskoaq"
      onBlur={[Function]}
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder=""
      spellCheck="false"
      value="#088DA5"
    />
    <div
      className="css-1vt3t4y"
    >
      <select
        className="css-zt7y5h"
        name="formats"
        onChange={[Function]}
      >
        <option
          value="HEX"
        >
          HEX
        </option>
        <option
          value="HSV"
        >
          HSV
        </option>
        <option
          value="RGB"
        >
          RGB
        </option>
        <option
          value="HSL"
        >
          HSL
        </option>
      </select>
    </div>
    <div
      className="css-tury48"
    >
      <span
        className="css-1v5ga19"
        title="Image picker"
      >
        <input
          accept="image/*"
          id="uploader"
          onChange={[Function]}
          style={
            Object {
              "display": "none",
            }
          }
          type="file"
        />
        <svg
          className="css-1h5x3dy"
          height={20}
          id="image-icon"
          viewBox="0 0 30 28"
          width={20}
        >
          <title />
          <path
            d="M10 9c0 1.656-1.344 3-3 3s-3-1.344-3-3 1.344-3 3-3 3 1.344 3 3zM26 15v7h-22v-3l5-5 2.5 2.5 8-8zM27.5 4h-25c-0.266 0-0.5 0.234-0.5 0.5v19c0 0.266 0.234 0.5 0.5 0.5h25c0.266 0 0.5-0.234 0.5-0.5v-19c0-0.266-0.234-0.5-0.5-0.5zM30 4.5v19c0 1.375-1.125 2.5-2.5 2.5h-25c-1.375 0-2.5-1.125-2.5-2.5v-19c0-1.375 1.125-2.5 2.5-2.5h25c1.375 0 2.5 1.125 2.5 2.5z"
            fill="#1f1f1f"
          />
        </svg>
      </span>
      <span
        className="css-1v5ga19"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={0}
        title="Palette generator"
      >
        <svg
          className="css-1h5x3dy"
          height={21}
          viewBox="0 0 24 24"
          width={21}
        >
          <title />
          <path
            d="M17.484 12c0.844 0 1.5-0.656 1.5-1.5s-0.656-1.5-1.5-1.5-1.5 0.656-1.5 1.5 0.656 1.5 1.5 1.5zM14.484 8.016c0.844 0 1.5-0.656 1.5-1.5s-0.656-1.5-1.5-1.5-1.5 0.656-1.5 1.5 0.656 1.5 1.5 1.5zM9.516 8.016c0.844 0 1.5-0.656 1.5-1.5s-0.656-1.5-1.5-1.5-1.5 0.656-1.5 1.5 0.656 1.5 1.5 1.5zM6.516 12c0.844 0 1.5-0.656 1.5-1.5s-0.656-1.5-1.5-1.5-1.5 0.656-1.5 1.5 0.656 1.5 1.5 1.5zM12 3c4.969 0 9 3.609 9 8.016 0 2.766-2.25 4.969-5.016 4.969h-1.734c-0.844 0-1.5 0.656-1.5 1.5 0 0.375 0.141 0.703 0.375 0.984s0.375 0.656 0.375 1.031c0 0.844-0.656 1.5-1.5 1.5-4.969 0-9-4.031-9-9s4.031-9 9-9z"
            fill="#1f1f1f"
          />
        </svg>
      </span>
      <span
        className="css-1v5ga19"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={0}
        title="tint picker"
      >
        <svg
          className="css-1h5x3dy"
          height={21}
          viewBox="0 0 16 28"
          width={21}
        >
          <title />
          <path
            d="M8 18c0-0.391-0.125-0.766-0.313-1.078-0.203-0.313-1.031-1.375-1.359-2.422-0.047-0.172-0.203-0.25-0.328-0.25s-0.281 0.078-0.328 0.25c-0.328 1.047-1.156 2.109-1.359 2.422-0.187 0.313-0.313 0.688-0.313 1.078 0 1.109 0.891 2 2 2s2-0.891 2-2zM16 16c0 4.422-3.578 8-8 8s-8-3.578-8-8c0-1.578 0.484-3.047 1.266-4.297 0.797-1.25 4.141-5.484 5.406-9.703 0.203-0.672 0.828-1 1.328-1s1.141 0.328 1.328 1c1.266 4.219 4.609 8.453 5.406 9.703s1.266 2.719 1.266 4.297z"
            fill="#1f1f1f"
          />
        </svg>
      </span>
      <span
        className="css-1v5ga19"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={0}
        title="shade picker"
      >
        <svg
          className="css-1h5x3dy"
          height={20}
          viewBox="0 0 24 28"
          width={20}
        >
          <title />
          <path
            d="M12 22.5v-17c-4.688 0-8.5 3.813-8.5 8.5s3.813 8.5 8.5 8.5zM24 14c0 6.625-5.375 12-12 12s-12-5.375-12-12 5.375-12 12-12 12 5.375 12 12z"
            fill="#1f1f1f"
          />
        </svg>
      </span>
      <span
        aria-label="Copied"
        className="no-tooltip css-1v5ga19"
        id="clipboard"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={0}
      >
        <svg
          className="css-1h5x3dy"
          height={18}
          viewBox="0 0 20 20"
          width={19}
        >
          <title />
          <path
            d="M15.6 2l-1.2 3h-8.8l-1.2-3c-0.771 0-1.4 0.629-1.4 1.4v15.2c0 0.77 0.629 1.4 1.399 1.4h11.2c0.77 0 1.4-0.631 1.4-1.4v-15.2c0.001-0.771-0.63-1.4-1.399-1.4zM13.6 4l0.9-2h-2.181l-0.719-2h-3.2l-0.72 2h-2.18l0.899 2h7.201z"
            fill="#1f1f1f"
          />
        </svg>
      </span>
      <span
        className="css-1v5ga19"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={0}
        title="reset colors"
      >
        <svg
          className="css-1h5x3dy"
          height={18}
          viewBox="0 0 32 32"
          width={17.5}
        >
          <title />
          <path
            d="M32 16c0-8.836-7.164-16-16-16-8.837 0-16 7.164-16 16 0 8.837 7.163 16 16 16 8.836 0 16-7.163 16-16zM8 16l8-8v6h8v4h-8v6l-8-8z"
            fill="#1f1f1f"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Test BasicPicker API should render the picker without triangle 1`] = `
<div
  className="css-x0eppt"
>
  <div
    className="css-3ef40x"
    style={
      Object {
        "background": "#088da5",
      }
    }
  >
    <div
      className="css-1uaa0vj"
      style={
        Object {
          "color": "#fff",
        }
      }
    >
      #088da5
    </div>
  </div>
  <div
    style={
      Object {
        "padding": 10,
      }
    }
  >
    <div
      className="css-w1azp9"
    >
      <div
        className="css-1hbvcva"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="swatch"
        tabIndex={0}
        title="#5a80b4"
      />
      <div
        className="css-m4zxvt"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="swatch"
        tabIndex={0}
        title="#40e0d0"
      />
      <div
        className="css-1sqfe4l"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="swatch"
        tabIndex={0}
        title="#088da5"
      />
      <div
        className="css-96uqyh"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="swatch"
        tabIndex={0}
        title="#f6546a"
      />
      <div
        className="css-1yav785"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="swatch"
        tabIndex={0}
        title="#cac8a0"
      />
      <div
        className="css-qst2hs"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="swatch"
        tabIndex={0}
        title="#0079cf"
      />
      <div
        className="css-yxjnn"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="swatch"
        tabIndex={0}
        title="#ffa6ca"
      />
      <div
        className="css-1s9wf3m"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="swatch"
        tabIndex={0}
        title="#03ec13"
      />
      <div
        className="css-93el6m"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="swatch"
        tabIndex={0}
        title="#3999dc"
      />
      <div
        className="css-7dxf9e"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="swatch"
        tabIndex={0}
        title="#e1c9ec"
      />
      <div
        className="css-13nxtfe"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="swatch"
        tabIndex={0}
        title="#2f9d66"
      />
      <div
        className="css-1ot1zbd"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="swatch"
        tabIndex={0}
        title="#daa520"
      />
    </div>
    <input
      className="css-sskoaq"
      onBlur={[Function]}
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder=""
      spellCheck="false"
      value="#088DA5"
    />
    <div
      className="css-1vt3t4y"
    >
      <select
        className="css-zt7y5h"
        name="formats"
        onChange={[Function]}
      >
        <option
          value="HEX"
        >
          HEX
        </option>
        <option
          value="HSV"
        >
          HSV
        </option>
        <option
          value="RGB"
        >
          RGB
        </option>
        <option
          value="HSL"
        >
          HSL
        </option>
      </select>
    </div>
    <div
      className="css-tury48"
    >
      <span
        className="css-1v5ga19"
        title="Image picker"
      >
        <input
          accept="image/*"
          id="uploader"
          onChange={[Function]}
          style={
            Object {
              "display": "none",
            }
          }
          type="file"
        />
        <svg
          className="css-1h5x3dy"
          height={20}
          id="image-icon"
          viewBox="0 0 30 28"
          width={20}
        >
          <title />
          <path
            d="M10 9c0 1.656-1.344 3-3 3s-3-1.344-3-3 1.344-3 3-3 3 1.344 3 3zM26 15v7h-22v-3l5-5 2.5 2.5 8-8zM27.5 4h-25c-0.266 0-0.5 0.234-0.5 0.5v19c0 0.266 0.234 0.5 0.5 0.5h25c0.266 0 0.5-0.234 0.5-0.5v-19c0-0.266-0.234-0.5-0.5-0.5zM30 4.5v19c0 1.375-1.125 2.5-2.5 2.5h-25c-1.375 0-2.5-1.125-2.5-2.5v-19c0-1.375 1.125-2.5 2.5-2.5h25c1.375 0 2.5 1.125 2.5 2.5z"
            fill="#1f1f1f"
          />
        </svg>
      </span>
      <span
        className="css-1v5ga19"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={0}
        title="Palette generator"
      >
        <svg
          className="css-1h5x3dy"
          height={21}
          viewBox="0 0 24 24"
          width={21}
        >
          <title />
          <path
            d="M17.484 12c0.844 0 1.5-0.656 1.5-1.5s-0.656-1.5-1.5-1.5-1.5 0.656-1.5 1.5 0.656 1.5 1.5 1.5zM14.484 8.016c0.844 0 1.5-0.656 1.5-1.5s-0.656-1.5-1.5-1.5-1.5 0.656-1.5 1.5 0.656 1.5 1.5 1.5zM9.516 8.016c0.844 0 1.5-0.656 1.5-1.5s-0.656-1.5-1.5-1.5-1.5 0.656-1.5 1.5 0.656 1.5 1.5 1.5zM6.516 12c0.844 0 1.5-0.656 1.5-1.5s-0.656-1.5-1.5-1.5-1.5 0.656-1.5 1.5 0.656 1.5 1.5 1.5zM12 3c4.969 0 9 3.609 9 8.016 0 2.766-2.25 4.969-5.016 4.969h-1.734c-0.844 0-1.5 0.656-1.5 1.5 0 0.375 0.141 0.703 0.375 0.984s0.375 0.656 0.375 1.031c0 0.844-0.656 1.5-1.5 1.5-4.969 0-9-4.031-9-9s4.031-9 9-9z"
            fill="#1f1f1f"
          />
        </svg>
      </span>
      <span
        className="css-1v5ga19"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={0}
        title="tint picker"
      >
        <svg
          className="css-1h5x3dy"
          height={21}
          viewBox="0 0 16 28"
          width={21}
        >
          <title />
          <path
            d="M8 18c0-0.391-0.125-0.766-0.313-1.078-0.203-0.313-1.031-1.375-1.359-2.422-0.047-0.172-0.203-0.25-0.328-0.25s-0.281 0.078-0.328 0.25c-0.328 1.047-1.156 2.109-1.359 2.422-0.187 0.313-0.313 0.688-0.313 1.078 0 1.109 0.891 2 2 2s2-0.891 2-2zM16 16c0 4.422-3.578 8-8 8s-8-3.578-8-8c0-1.578 0.484-3.047 1.266-4.297 0.797-1.25 4.141-5.484 5.406-9.703 0.203-0.672 0.828-1 1.328-1s1.141 0.328 1.328 1c1.266 4.219 4.609 8.453 5.406 9.703s1.266 2.719 1.266 4.297z"
            fill="#1f1f1f"
          />
        </svg>
      </span>
      <span
        className="css-1v5ga19"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={0}
        title="shade picker"
      >
        <svg
          className="css-1h5x3dy"
          height={20}
          viewBox="0 0 24 28"
          width={20}
        >
          <title />
          <path
            d="M12 22.5v-17c-4.688 0-8.5 3.813-8.5 8.5s3.813 8.5 8.5 8.5zM24 14c0 6.625-5.375 12-12 12s-12-5.375-12-12 5.375-12 12-12 12 5.375 12 12z"
            fill="#1f1f1f"
          />
        </svg>
      </span>
      <span
        aria-label="Copied"
        className="no-tooltip css-1v5ga19"
        id="clipboard"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={0}
      >
        <svg
          className="css-1h5x3dy"
          height={18}
          viewBox="0 0 20 20"
          width={19}
        >
          <title />
          <path
            d="M15.6 2l-1.2 3h-8.8l-1.2-3c-0.771 0-1.4 0.629-1.4 1.4v15.2c0 0.77 0.629 1.4 1.399 1.4h11.2c0.77 0 1.4-0.631 1.4-1.4v-15.2c0.001-0.771-0.63-1.4-1.399-1.4zM13.6 4l0.9-2h-2.181l-0.719-2h-3.2l-0.72 2h-2.18l0.899 2h7.201z"
            fill="#1f1f1f"
          />
        </svg>
      </span>
      <span
        className="css-1v5ga19"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={0}
        title="reset colors"
      >
        <svg
          className="css-1h5x3dy"
          height={18}
          viewBox="0 0 32 32"
          width={17.5}
        >
          <title />
          <path
            d="M32 16c0-8.836-7.164-16-16-16-8.837 0-16 7.164-16 16 0 8.837 7.163 16 16 16 8.836 0 16-7.163 16-16zM8 16l8-8v6h8v4h-8v6l-8-8z"
            fill="#1f1f1f"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;
